--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@mui/x-charts": "^6.19.5",
+    "mongodb": "^6.5.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
