--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-charts": "^6.19.5",
     "mongodb": "^6.5.0",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
