--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@mui/x-charts": "^6.19.5",
-    "@react-pdf/renderer": "^3.4.2",
+    "@pdf-lib/fontkit": "^1.1.1",
     "mongodb": "^6.5.0",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-dom": "^18"
   },
