--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@mui/x-charts": "^8.9.0",
     "@pdf-lib/fontkit": "^1.1.1",
     "mongodb": "^6.5.0",
-    "next": "^15.4.2",
+    "next": "14.2.5",
     "next-auth": "^4.24.7",
     "pdf-lib": "^1.17.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -28,7 +28,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "^15.4.2",
+    "eslint-config-next": "^14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
